@@ -1,3 +1,8 @@
+2006-08-02  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/numeric/nlpqnewton.cxx: moved method definitions into class declaration,
+	plus some code cleanup.
+
 2006-08-02  Tor Lillqvist  <tml@novell.com>
 
 	* source/numeric/makefile.mk
